Commit da parte inicial do Carlos

--- a/res/layout/activity_coletor_app.xml
+++ b/res/layout/activity_coletor_app.xml
@@ -7,5 +7,16 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.furb.coletalogistica.ColetorApp" >
+    
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Escolha um produto:" />
+
+    <ListView
+        android:id="@+id/lista_contatos"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
 
 </RelativeLayout>
